Normalização da lista de palavras

--- a/Corretor.ipynb
+++ b/Corretor.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "43fa3e53",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "1295cb8f",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "2605046"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "e71b173e",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "b8d0cb21",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "b24cb3d2",
    "metadata": {},
    "outputs": [
@@ -146,6 +146,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "393f4f6d",
+   "metadata": {},
+   "source": [
+    "### Separando Palavras de Tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "01cf5a98",
    "metadata": {},
    "source": [
@@ -158,13 +166,249 @@
     "Em Processamento de Linguagem Natural, cada um dos elementos separados desse vetor é conhecido como token. Ou seja, ao pegarmos as strings e as separarmos em pequenos pedaços, estamos tokenizando a frase.\n",
     "\n",
     "Portanto, ainda temos apenas tokens separados, e não palavras separadas propriamente ditas.\n",
+    "\n",
+    "Uma ferramenta bem conhecida na área de NLP é o nltk ou Natural Language Tool Kit, que é um conjunto de ferramentas que implementa diversos métodos e algoritmos para análise textual.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "f8420774",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nltk in c:\\users\\joaoe\\anaconda3\\lib\\site-packages (3.5)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\joaoe\\anaconda3\\lib\\site-packages (from nltk) (4.59.0)\n",
+      "Requirement already satisfied: regex in c:\\users\\joaoe\\anaconda3\\lib\\site-packages (from nltk) (2021.4.4)\n",
+      "Requirement already satisfied: click in c:\\users\\joaoe\\anaconda3\\lib\\site-packages (from nltk) (8.0.1)\n",
+      "Requirement already satisfied: joblib in c:\\users\\joaoe\\anaconda3\\lib\\site-packages (from nltk) (1.0.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\joaoe\\anaconda3\\lib\\site-packages (from click->nltk) (0.4.4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "32b99a93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1d87e8e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\joaoe\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('punkt')\n",
+    "palavras_separadas = nltk.tokenize.word_tokenize(texto_exemplo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "25264551",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Olá', ',', 'tudo', 'bem', '?']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palavras_separadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "125ff7fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(palavras_separadas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea600ec7",
+   "metadata": {},
+   "source": [
+    "Ou seja, a frase \"Olá, tudo bem?\" possui cinco tokens, sendo três palavras e duas pontuações, mas precisamos descobrir apenas a quantidade de vocábulos no corpus.\n",
+    "\n",
+    "Para fazermos a separação dos tokens, criaremos uma função \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5b8cb9f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Olá', 'tudo', 'bem']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def separa_palavras(lista_tokens):\n",
+    "    lista_palavras = []\n",
+    "    for token in lista_tokens:\n",
+    "        if token.isalpha():             #isalpha() selecionará apenas as letras do alfabeto, retornando-as como verdadeiro\n",
+    "            lista_palavras.append(token)\n",
+    "    return lista_palavras\n",
+    "\n",
+    "separa_palavras(palavras_separadas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94d4aeec",
+   "metadata": {},
+   "source": [
+    "Então, vamos aplicar este método em nosso corpus."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3f228317",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número de palavras é 403106\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_tokens = nltk.tokenize.word_tokenize(artigos)\n",
+    "lista_palavras = separa_palavras(lista_tokens)\n",
+    "print(f\"O número de palavras é {len(lista_palavras)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72cb49ca",
+   "metadata": {},
+   "source": [
+    "O valor total de palavras retornado não representa a quantidade de palavras únicas que podem ser corrigidas, afinal muitas delas aparecerão *repetidas *nos textos.\n",
+    "\n",
+    "Portanto, precisaremos calcular quantos vocábulos únicos existem sem repetição."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e41644d",
+   "metadata": {},
+   "source": [
+    "### Normalização"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "05dcb4f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['imagem', 'temos', 'a', 'seguinte', 'classe', 'que', 'representa', 'um', 'usuário', 'no']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def normalizacao(lista_palavras):      # Esta função retorna uma lista com as letras todas em minuscúlas.\n",
+    "    lista_normalizada = []\n",
+    "    for palavra in lista_palavras:\n",
+    "        lista_normalizada.append(palavra.lower())\n",
+    "    return lista_normalizada\n",
+    "\n",
+    "lista_normalizada = normalizacao(lista_palavras)\n",
+    "print(lista_normalizada[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e17ad1b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18465"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(lista_normalizada))        # set() remove as repetições de palavras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34dfc516",
+   "metadata": {},
+   "source": [
+    "Este será o número de palavras que nosso corretor ortográfico aprenderá a corrigir"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d113d6f3",
+   "id": "9e7d8d35",
    "metadata": {},
    "outputs": [],
    "source": []
